# kaya_dynamixel

./: .gitignore  README.md  xbox.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk/share/dynamixel_sdk/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  dynamixel_sdkConfig-version.cmake  dynamixel_sdkConfig.cmake
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: package.bash  package.zsh
log/: latest_build
src/: .gitignore
src/DynamixelSDK/dynamixel_sdk_custom_interfaces/: .gitignore  CMakeLists.txt
src/DynamixelSDK/dynamixel_sdk_examples/: CMakeLists.txt
src/DynamixelSDK/dynamixel_sdk_examples/config/: xbox.yaml
src/DynamixelSDK/dynamixel_sdk_examples/launch/: bmi160.launch.py  car_robot.launch.py  dynamixelcontroller.launch.py  motorcontroller.launch.py
src/DynamixelSDK/dynamixel_sdk_examples/lib/: DFRobot_BMI160.cpp  DFRobot_BMI160.h
src/DynamixelSDK/dynamixel_sdk_examples/lib/i2c_driver/: i2c_driver.cpp
src/DynamixelSDK/dynamixel_sdk_examples/src/: bmi160.cpp  dynamixelcontroller.cpp  motorcontroller.cpp  my_read_write.cpp  read_write_node.cpp  relativespeeds.cpp
src/DynamixelSDK/omniwheel_dynamixel_controller/: CMakeLists.txt  package.xml
src/all_sensors/: CMakeLists.txt  package.xml
src/all_sensors/libraries/bmi160/: bmi160-i2c.cpp  bmi160-i2c.h  bmi160_defs.h
src/all_sensors/libraries/i2c_driver/: i2c_driver.h
src/all_sensors/src/: bmi160.cpp
src/visuals/: CMakeLists.txt  package.xml
(+63 files in other folders)
